--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
 html,
-body, #poster {
+body {
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
 }
 
-body, #poster {
+body {
 	position: relative;
 	line-height: 1;
 
@@ -13,6 +13,11 @@ body, #poster {
 	color: #000;
 }
 
+#poster {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
 
 h1, h2, h3, h4, h5 {
 	text-align: center;
@@ -73,7 +78,7 @@ a {
 	border: 0;
 }
 
-}
+
 ul, ol {
 	margin: 0;
 	padding: 0;
