--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 html,
-body {
+body, #poster {
+	margin: 0;
+	padding: 0;
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
@@ -13,38 +15,39 @@ body {
 	color: #000;
 }
 
-#poster {
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-}
-
-h1, h2, h3, h4, h5 {
+h1, h2, h3, h4, h5, .title, .subtitle, .attribution, .affiliation, .sectionheading {
 	text-align: center;
-	font-family: "Times New Roman", Times, serif;
+	font-family: "Source Sans Pro", Arial, sans-serif;
 
 }
 
- p .text {
+ .text {
 	 font-size: 32px;
 	 text-align: left;
-	 font-family: "Helvetica", sans-serif;
+	 font-family: "Source Sans Pro", Arial, sans-serif;
  }
 
-h1 .title {
-	font-size: 85px;
+.title, .attribution, .affiliation {
+	background-color: #4e117f;
+	color: #FFF;
+	text-align: center;
+}
+.title {
+
+	font-size: 80px;
+	width: 100%;
 
 }
 
-h3 .subtitle {
+.subtitle {
 	font-size: 65px;
 }
 
-h3 .attribution {
-	font-size: 60px;
+.attribution {
+	font-size: 55px;
 }
 
-h5 .affiliation {
+.affiliation {
 	font-size: 40px;
 }
 
@@ -53,7 +56,7 @@ a {
 }
 .section {
 	position: relative;
-	margin: 0;
+	margin-top: 20;
 	padding: 0;
 	border: 0;
 	font-size: 100%;
@@ -72,9 +75,9 @@ a {
 	border: 0;
 }
 
-.image {
-	width: 15%
-	height: 20%; 
+.image img {
+	width: 400px;
+	height: 300px;
 	margin: 0 auto;
 	padding: 0;
 	border: 0;
