--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ h1, h2, h3, h4, h5, .title, .subtitle, .attribution, .affiliation, .sectionheadi
 }
 
  .text {
-	 font-size: 32px;
+	 font-size: 30px;
 	 text-align: left;
 	 font-family: "Source Sans Pro", Arial, sans-serif;
  }
@@ -30,11 +30,11 @@ h1, h2, h3, h4, h5, .title, .subtitle, .attribution, .affiliation, .sectionheadi
 .title, .attribution, .affiliation {
 	background-color: #4e117f;
 	color: #FFF;
-	text-align: center;
+	text-align: left;
 }
 .title {
 
-	font-size: 80px;
+	font-size: 75px;
 	width: 100%;
 
 }
