--- a/css/styles.css
+++ b/css/styles.css
@@ -5,38 +5,33 @@ body, #poster {
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
+
 }
 
 body {
 	position: relative;
 	line-height: 1;
-
 	background-color: #efefef;
 	color: #000;
-}
-
-h1, h2, h3, h4, h5, .title, .subtitle, .attribution, .affiliation, .sectionheading {
-	text-align: center;
 	font-family: "Source Sans Pro", Arial, sans-serif;
-
 }
 
  .text {
-	 font-size: 30px;
+	 font-size: 25px;
 	 text-align: left;
-	 font-family: "Source Sans Pro", Arial, sans-serif;
+	 padding: 5;
  }
 
-.title, .attribution, .affiliation {
+.title, .attribution, .affiliation, .subtitle, .sectionheading {
 	background-color: #4e117f;
 	color: #FFF;
-	text-align: left;
+	padding-left: 10;
 }
+
 .title {
 
 	font-size: 75px;
 	width: 100%;
-
 }
 
 .subtitle {
@@ -57,25 +52,37 @@ a {
 .section {
 	position: relative;
 	margin-top: 20;
+	margin-left: 10;
 	padding: 0;
-	border: 0;
+	border: solid 1px;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;
+
 }
 
-.section > heading {
-	font-size: 44px;
+.section iframe {
+	width: inherit;
+	height: auto;
+	padding: 20px;
+}
+
+
+.sectionheading {
+	font-size: 42px;
+	font-weight: bold;
 
 }
 
 .embed {
+	width: 100%;
 	margin: 0 auto;
 	padding: 0;
 	border: 0;
 }
 
 .image img {
+	position: relative;
+	float: left;
 	width: 400px;
 	height: 300px;
 	margin: 0 auto;
